--- a/main.html
+++ b/main.html
@@ -10,7 +10,33 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<table border="5">
+        <tr>
+            <th>Roll Numbers</th>
+            <th>Names</th>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>Ajay</td>
 
+        </tr>
+        <tr>
+            <td>23</td>
+            <td>Raju</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Vishal</td>
+        </tr>
+
+    </table><br>
+    <h3>List of medias</h3>
+    <ol>
+        <li><img src="https://i.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs"height="200"width="200"></li>
+        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"width="200"height="200"controls="autoplay" type="mp4"></video></li><br>
+
+        <li><audio src="http://commondatastorage.googleapis/.mp3" controls="autoplay"></audio></li>
+    </ol>
 </body>
 
 </html>
