--- a/main.html
+++ b/main.html
@@ -32,10 +32,10 @@
     </table><br>
     <h3>List of medias</h3>
     <ol>
-        <li><img src="https://i.picsum.photos/id/123/200/300.jpg?hmac=uMA4z26tAYQnhW8_XlH0SoULB5z9s8tan-WCDkzbdMs"height="200"width="200"></li>
-        <li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"width="200"height="200"controls="autoplay" type="mp4"></video></li><br>
+        <li><img src='https://picsum.photos/id/123/200/300' alt="img"height="200"width="200"></li>
+        <li><video source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"width="200"height="200" controls="autoplay" type="mp4"></video></li><br>
 
-        <li><audio src="http://commondatastorage.googleapis/.mp3" controls="autoplay"></audio></li>
+        <li><audio src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg' controls="autoplay" width="300px" hei></audio></li>
     </ol>
 </body>
 
