--- a/main.html
+++ b/main.html
@@ -33,10 +33,11 @@
     <h3>List of medias</h3>
     <ol>
         <li><img src='https://picsum.photos/id/123/200/300' alt="img"height="200"width="200"></li>
-        <li><video source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"width="200"height="200" controls="autoplay" type="mp4"></video></li><br>
+        <li><video width="200"height="200" controls="autoplay"type="mp4"><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" ></video></li><br>
 
-        <li><audio src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg' controls="autoplay" width="300px" hei></audio></li>
+        <li><audio src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg' controls="autoplay" ></audio></li>
     </ol>
+    
 </body>
 
 </html>
