--- a/main.html
+++ b/main.html
@@ -10,30 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<table border="5">
-        <tr>
-            <th>Roll Numbers</th>
-            <th>Names</th>
-        </tr>
-        <tr>
-            <td>12</td>
-            <td>Ajay</td>
+<table>
+		<thead>
+		  <th>Roll numbers </th>
+		  <th>Names</th>
+		</thead>
+		<tr>
+		  <td>1</td>
+		  <td>dona</td>
+		</tr>
+		<tr>
+		  <td>1</td>
+		  <td>dona</td>
+		</tr>
+		<tr>
+		  <td>1</td>
+		  <td>dona</td>
+		</tr>
 
-        </tr>
-        <tr>
-            <td>23</td>
-            <td>Raju</td>
-        </tr>
-        
-
-    </table><br>
-    <h3>List of medias</h3>
-    <ol>
-        <li><img src='https://picsum.photos/id/123/200/300' alt="img"height="200"width="200"></li>
-        <li><video width="200"height="200" controls="autoplay"type="mp4"><source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" ></video></li><br>
-
-        <li><audio src='http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg' controls="autoplay" ></audio></li>
-    </ol>
+		
+	  </table>
     
 </body>
 
