--- a/main.html
+++ b/main.html
@@ -30,6 +30,17 @@
 
 		
 	  </table>
+	  
+<h1>List of medias</h1>
+<ol>
+<li><img src="https://picsum.photos/id/123/200/300" alt="picture"></li>
+<li><video width="400px" controls>
+	<source
+	  src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"/>
+</video></li>
+<li><audio witdth="400px" controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+ </audio>
+</ol>
     
 </body>
 
